--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
   "license": "MIT",
   "scripts": {
     "start": "mdx-deck deck.mdx",
-    "startOther": "mdx-deck deck2.mdx",
-    "build": "mdx-deck build deck.mdx"
+    "copy-static": "copy static dist",
+    "build": "mdx-deck build deck.mdx",
+    "pdf": "mdx-deck pdf deck.mdx",
+    "image": "mdx-deck screenshot deck.mdx",
+    "help": "mdx-deck",
+    "prepublish-deck": "npm run build",
+    "publish-deck": "gh-pages -d dist"
   },
   "dependencies": {
     "code-surfer": "3.0.0",
@@ -17,6 +22,10 @@
     "react-syntax-highlighter": "12.2.1",
     "styled-components": "4.1.3",
     "prismjs": "1.19.0"
+  },
+  "devDependencies": {
+    "@types/react": "^16.8.15",
+    "gh-pages": "^2.0.1"
   },
   "resolutions": {
     "mdx-deck/**/gatsby": "2.18.4"
